--- a/index.html
+++ b/index.html
@@ -389,15 +389,17 @@
                 <h3>Branch Office</h3>
                 <p>
                     Element Design Architects<br>
-                    Surat, Gujarat – India
+					211, 2nd Floor, Shiv Plaza<br>
+					Ahmedabad - Palanpur Hwy, near Gathaman, Patiya - 385001<br>
+					Palanpur, Gujarat – India
                 </p>
                 <p>
-                    <strong>Phone:</strong> +91 9XXXXXXXXX
+                    <strong>Phone:</strong> +91 9409687675
                 </p>
 
                 <div class="map-container">
                     <iframe
-                        src="https://www.google.com/maps?q=Surat,Gujarat,India&output=embed"
+                        src="https://www.google.com/maps?q=Shiv Plaza, 2nd Floor, Ahmedabad - Palanpur Hwy, near Gathaman, Patiya, Palanpur,Gujarat,India&output=embed"
                         loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade">
                     </iframe>
