--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
 
     <!-- India Local SEO Meta -->
-    <title>Element Design | Architect in India | Residential & Commercial Architecture</title>
+    <!-- <title>Element Design | Architect in India | Residential & Commercial Architecture</title> -->
+	
+	<title>Element Design by Sumit Meveda | Architecture & Interior Design Ahmedabad</title>
+	
+	<meta name="description"
+	content="Element Design by Sumit Meveda - is a professional architectural firm in India with 15+ years of experience in residential, commercial, and interior architecture. We specialize in spacious, comfortable, and modern design solutions." />
 
-    <meta name="description"
-          content="Element Design is a professional architectural firm in India with 15+ years of experience in residential, commercial, and interior architecture. We specialize in spacious, comfortable, and modern design solutions.">
-
+     
     <meta name="keywords"
           content="Architect in India, Architectural firm in India, Residential architect, Commercial architect, Interior architect, Modern architecture India, Sustainable architecture, Space planning architect">
 
@@ -62,8 +65,11 @@
 <!-- ================= HERO SECTION ================= -->
 <section class="hero" id="home">
     <div class="hero-content container">
-        <h1>Designing Spaces That Inspire</h1>
+		<h1>Element Design by Sumit Meveda</h1>
+		<h2>Designing Spaces That Inspire</h2>
+        <!-- <h1></h1> -->
         <p>Modern architectural solutions blending creativity and functionality.</p>
+		<br>
         <a href="#contact" class="btn-primary">Get in Touch</a>
     </div>
 </section>
