--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	
 	<meta name="description"
 	content="Element Design by Sumit Meveda - is a professional architectural firm in India with 15+ years of experience in residential, commercial, and interior architecture. We specialize in spacious, comfortable, and modern design solutions." />
-
+	<meta name="google-site-verification" content="sxmrIpXHtBI-o_GKNY0u6wGBrDgifGLNFEJqjQ-SVdA" />
      
     <meta name="keywords"
           content="Architect in India, Architectural firm in India, Residential architect, Commercial architect, Interior architect, Modern architecture India, Sustainable architecture, Space planning architect">
@@ -434,3 +434,4 @@
 <script src="js/script.js"></script>
 </body>
 </html>
+
