--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	
      
     <meta name="keywords"
-          content="Architect in India, Architectural firm in India, Residential architect, Commercial architect, Interior architect, Modern architecture India, Sustainable architecture, Space planning architect">
+          content="Element Design, Sumit Mevada, Architect in India, Architectural firm in India, Residential architect, Commercial architect, Interior architect, Modern architecture India, Sustainable architecture, Space planning architect">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -29,8 +29,15 @@
 {
   "@context": "https://schema.org",
   "@type": "Architect",
-  "name": "Element Design",
+  "name": "Element Design by Sumit Mevada",
   "description": "Architectural firm in India specializing in residential, commercial, and interior architecture.",
+  "url": "https://elementdesign.co.in",
+  "address": {
+	   "@type": "PostalAddress",
+	   "addressLocality": "Ahmedabad",
+	   "addressRegion": "Gujarat",
+	   "addressCountry": "India"
+  },
   "areaServed": {
     "@type": "Country",
     "name": "India"
@@ -433,5 +440,6 @@
 <script src="js/script.js"></script>
 </body>
 </html>
+
 
 
