Fix HTML structure and update content

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <!-- ================= NAVBAR ================= -->
 <header class="header">
     <nav class="navbar container">
-        <div class="logo">Element<span>Design</span></div>
+        <div class="logo">ELEMENT : DESIGN</div>
 
         <ul class="nav-links" id="navLinks">
             <li><a href="#home">Home</a></li>
@@ -71,7 +71,7 @@
 <!-- ================= HERO SECTION ================= -->
 <section class="hero" id="home">
     <div class="hero-content container">
-		<h1>Element Design by Sumit Meveda</h1>
+		<h1>Ar. Sumit Meveda</h1>
 		<h2>Designing Spaces That Inspire</h2>
         <!-- <h1></h1> -->
         <p>Modern architectural solutions blending creativity and functionality.</p>
@@ -92,20 +92,20 @@
                  class="architect-photo">
         </div>
         <div class="about-text">
-			<p class="section-text">
-				<strong>Element Design</strong> is a professional architectural firm in India with
-				over <strong>15 years of experience</strong> in delivering residential,
-				commercial, and interior architectural design solutions.
+			<p class="about-text">
+				<strong>Element Design</strong> is an experienced architecture firm in India <strong>established in 2013</strong>,
+				offering residential, commercial, and interior design services. 
 			</p>
-
-			<p class="section-text">
+			<br>
+			<p class="about-text">
 				We specialize in creating <strong>spacious, comfortable, and well-planned living
 				and working environments</strong> that align with modern Indian lifestyles.
 				Our architectural approach combines contemporary design, efficient space planning,
 				and sustainable practices to deliver long-lasting value.
 			</p>
+			<br>
 
-			<p class="section-text">
+			<p class="about-text">
 				As a trusted architect in India, we work closely with clients to transform their
 				vision into functional and aesthetically refined spaces, ensuring quality,
 				comfort, and timely execution.
@@ -113,26 +113,9 @@
         </div>
     </div>
 </section>
-
-<!-- ================= VISION & MISSION ================= -->
-<!-- <section class="about container">
-    <h2 class="section-title">Our Vision</h2>
-    <p class="section-text">
-        To create <strong>spacious, comfortable, and inspiring environments</strong>
-        that elevate the quality of living and working through intelligent architectural
-        design, innovation, and sustainability.
-    </p>
-
-    <h2 class="section-title">Our Mission</h2>
-    <p class="section-text">
-        Our mission is to deliver <strong>high-quality architectural and interior design
-        solutions</strong> that prioritize comfort, functionality, and timeless design.
-        We collaborate closely with our clients to transform their requirements into
-        well-planned spaces that support modern lifestyles.
-    </p>
-</section> -->
+ 
 <!-- ================= CORE VALUES ================= -->
-<section class="why-choose">
+<!--<section class="why-choose">
     <h2 class="section-title">Our Core Values</h2>
 
     <div class="why-choose-grid">
@@ -166,7 +149,7 @@
             </p>
         </div>
     </div>
-</section>
+</section>-->
 
 <!-- ================= WHY CHOOSE US ================= -->
 <section class="why-choose">
@@ -401,7 +384,7 @@
                 <h3>Branch Office</h3>
                 <p>
                     Element Design Architects<br>
-					211, 2nd Floor, Shiv Plaza<br>
+					43, 2nd Floor, Shiv Plaza<br>
 					Ahmedabad - Palanpur Hwy, near Gathaman, Patiya - 385001<br>
 					Palanpur, Gujarat – India
                 </p>
@@ -440,6 +423,5 @@
 <script src="js/script.js"></script>
 </body>
 </html>
-
 
 
