Restore index.html with updated content

--- a/index.html
+++ b/index.html
@@ -53,7 +53,14 @@
 <!-- ================= NAVBAR ================= -->
 <header class="header">
     <nav class="navbar container">
-        <div class="logo">ELEMENT : DESIGN</div>
+        <div >
+			<div class="logo">ELEMENT : DESIGN</div>
+			<div class="smalllogo">
+				<span>architect</span>
+				<span>interior</span>
+				<span>landscape</span>
+			</div>
+		</div>
 
         <ul class="nav-links" id="navLinks">
             <li><a href="#home">Home</a></li>
@@ -80,53 +87,33 @@
 <!-- </section> -->
 <!-- Hero Section -->
 <!-- HERO WITH MOVING PROJECTS -->
-<section class="hero">
+<section class="hero" id="home">
 
     <div class="hero-slider">
 
         <!-- Slide 1 -->
         <div class="slide active">
             <img src="assets/images/project-1.jpg" alt="Modern Residential Project">
-            <div class="hero-overlay">
-                <h1>ELEMENT DESIGN</h1>
-                <p>Architect <strong>SUMIT MEVADA</strong></p>
-            </div>
         </div>
 
         <!-- Slide 2 -->
         <div class="slide">
-            <img src="assets/images/project-2.jpg" alt="Luxury Villa Design">
-            <div class="hero-overlay">
-                <h1>Innovative Architecture</h1>
-                <p>Modern & Spacious Living</p>
-            </div>
+            <img src="assets/images/project-2.jpg" alt="Luxury Villa Design"> 
         </div>
 
         <!-- Slide 3 -->
         <div class="slide">
-            <img src="assets/images/project-3.jpg" alt="Commercial Project">
-            <div class="hero-overlay">
-                <h1>Functional Design</h1>
-                <p>Residential & Commercial Spaces</p>
-            </div>
+            <img src="assets/images/project-3.jpg" alt="Commercial Project"> 
         </div>
 
         <!-- Slide 4 -->
         <div class="slide">
             <img src="assets/images/project-5.jpg" alt="Commercial Project">
-            <div class="hero-overlay">
-                <h1>Minimalist Residential Design</h1>
-                <p>Residential & Commercial Spaces</p>
-            </div>
         </div>
 
         <!-- Slide 5 -->
         <div class="slide">
             <img src="assets/images/project-duplex-home.jpg" alt="Commercial Project">
-            <div class="hero-overlay">
-                <h1>Duplex Residential Home</h1>
-                <p>Residential & Commercial Spaces</p>
-            </div>
         </div>
 
 		 <!-- Navigation Arrows -->
@@ -139,16 +126,14 @@
 
 <!-- ================= ABOUT SECTION ================= -->
 <section class="about container" id="about">
-    <h2 class="section-title">About US</h2>
-
-     <div class="about-layout">
+    <div class="about-layout">
         <!-- Left: Architect Photo -->
-        <div class="about-photo">
-            <img src="assets/images/architect.jpg"
-                 alt="Architect at Element Design - 15 Years Experience"
-                 class="architect-photo">
-        </div>
         <div class="about-text">
+			<h4>OUR STUDIO IS LOCATED IN GUJARAT, INDIA</h4>
+			<br/>
+			
+			<h2 class="section-title">About US</h2>
+			
 			<p class="about-text">
 				<strong>Element Design</strong> is an experienced architecture firm in India <strong>established in 2013</strong>,
 				offering residential, commercial, and interior design services. 
@@ -167,6 +152,11 @@
 				vision into functional and aesthetically refined spaces, ensuring quality,
 				comfort, and timely execution.
 			</p>
+        </div>
+		<div class="about-photo">
+            <img src="assets/images/architect.jpg"
+                 alt="Architect at Element Design - 15 Years Experience"
+                 class="architect-photo">
         </div>
     </div>
 </section>
@@ -209,7 +199,7 @@
 </section>-->
 
 <!-- ================= WHY CHOOSE US ================= -->
-<section class="why-choose">
+<!-- <section class="why-choose">
     <div class="container">
         <h2 class="section-title">Why Choose Element Design</h2>
 
@@ -248,7 +238,7 @@
         </div>
     </div>
 </section>
-
+-->
 <!-- ================= PROJECTS SECTION ================= -->
 <section class="projects" id="projects">
     <div class="container">
